# fvirt

./: .bandit  .flake8  .gitattributes  .gitignore  .mdl-style.rb  .yamllint.yml  API.md  README.md  pyproject.toml
.github/: dependabot.yml  labeler.yml  labels.yml
.github/scripts/: check-labels.py
.github/workflows/: label-sync.yml  pr-labeler.yml  review.yml
fvirt/: __init__.py  cli.py  version.py
fvirt/commands/: __init__.py  schema.py  uri.py  version.py
fvirt/commands/_base/: autostart.py  command.py  config.py  exitcode.py  filecopy.py  filetransfer.py  group.py  help.py  info.py  lifecycle.py  list.py  match.py  new.py  objects.py  state.py  tables.py  xml.py  xslt.py
fvirt/commands/config/: __init__.py
fvirt/commands/domain/: __init__.py  _mixin.py  autostart.py  console.py  create.py  define.py  info.py  list.py  new.py  reset.py  save.py  shutdown.py  start.py  stop.py  undefine.py  xml.py  xslt.py
fvirt/commands/host/: __init__.py  uri.py  version.py
fvirt/commands/pool/: __init__.py  _mixin.py  autostart.py  build.py  create.py  define.py  delete.py  info.py  list.py  new.py  refresh.py  start.py  stop.py  undefine.py  xml.py  xslt.py
fvirt/commands/volume/: __init__.py  _mixin.py  define.py  delete.py  download.py  info.py  list.py  new.py  upload.py  wipe.py  xml.py
fvirt/libvirt/: __init__.py  data.py  descriptors.py  domain.py  entity.py  entity_access.py  events.py  exceptions.py  hypervisor.py  runner.py  storage_pool.py  stream.py  uri.py  volume.py
fvirt/libvirt/models/: _types.py  domain.py  storage_pool.py  volume.py
fvirt/templates/: __init__.py  domain.xml  pool.xml  volume.xml
fvirt/templates/domain/: _base.xml  _base_qemu.xml  _container.xml  _macros.xml  _vm.xml  hvf.xml  kvm.xml  lxc.xml  openvz.xml  qemu.xml  test.xml  xen.xml
fvirt/util/: commands.py  dummy_pool.py  match.py  match_alias.py  match_params.py  tables.py  templates.py  terminal.py  units.py
tests/: README.md  __init__.py  cli_test.py  conftest.py  shared.py  templates_test.py  version_test.py
tests/commands/: commands_schema_test.py  commands_version_test.py  shared.py  version_test.py
tests/commands/_base/: commands_base_config_test.py  commands_base_exitcode_test.py  commands_base_tables_test.py
tests/commands/config/: commands_config_dump_test.py  commands_config_effective_test.py  commands_config_paths_test.py
tests/commands/domain/: commands_domain_autostart_test.py  commands_domain_console_test.py  commands_domain_create_test.py  commands_domain_define_test.py  commands_domain_info_test.py  commands_domain_list_test.py  commands_domain_mixin_test.py  commands_domain_new_test.py  commands_domain_reset_test.py  commands_domain_save_test.py  commands_domain_shutdown_test.py  commands_domain_start_test.py  commands_domain_stop_test.py  commands_domain_test.py  commands_domain_undefine_test.py  commands_domain_xml_test.py  commands_domain_xslt_test.py  domain_test.py
tests/commands/host/: commands_host_info_test.py  commands_host_test.py  commands_host_uri_test.py  commands_host_version_test.py  host_test.py  host_uri_test.py
tests/commands/pool/: commands_pool_autostart_test.py  commands_pool_build_test.py  commands_pool_create_test.py  commands_pool_define_test.py  commands_pool_delete_test.py  commands_pool_info_test.py  commands_pool_list_test.py  commands_pool_mixin_test.py  commands_pool_new_test.py  commands_pool_refresh_test.py  commands_pool_start_test.py  commands_pool_stop_test.py  commands_pool_test.py  commands_pool_undefine_test.py  commands_pool_xml_test.py  commands_pool_xslt_test.py  pool_test.py
tests/commands/volume/: commands_volume_define_test.py  commands_volume_delete_test.py  commands_volume_download_test.py  commands_volume_info_test.py  commands_volume_list_test.py  commands_volume_mixin_test.py  commands_volume_new_test.py  commands_volume_test.py  commands_volume_upload_test.py  commands_volume_wipe_test.py  commands_volume_xml_test.py  volume_test.py
tests/data/: fvirt-config.yaml
tests/data/cases/: libvirt_models_domain.yaml  libvirt_models_storage_pool.yaml  libvirt_models_volume.yaml
tests/data/images/: README.md
tests/data/images/aarch64/: buildroot-config  busybox-config  kernel-config
tests/data/images/x86_64/: buildroot-commit  buildroot-config  busybox-config  kernel-config
tests/data/test-kernels/: x86_64.img
tests/libvirt/: conftest.py  libvirt_domain_test.py  libvirt_entity_test.py  libvirt_hypervisor_test.py  libvirt_storage_pool_test.py  libvirt_types_test.py  libvirt_uri_test.py  libvirt_volume_test.py  shared.py
tests/libvirt/models/: libvirt_models_domain_test.py  libvirt_models_storage_pool_test.py  libvirt_models_types_test.py  libvirt_models_volume_test.py
tests/util/: util_dummy_pool_test.py  util_match_test.py  util_overlay_test.py  util_report_test.py  util_tables_test.py  util_templates_test.py  util_units_test.py
ulvdm/: __init__.py
virshx/: __init__.py  cli.py  common.py  version.py
virshx/commands/: __init__.py  _common.py  domains.py  pools.py  reset.py  shutdown.py  start.py  start_pool.py  stop.py  stop_pool.py  uri.py  volumes.py  xslt.py  xslt_pool.py
virshx/commands/domain/: __init__.py  create.py  domains.py  list.py  reset.py  shutdown.py  start.py  stop.py  xslt.py
virshx/commands/pool/: __init__.py  define.py  list.py  pools.py  start.py  start_pool.py  stop.py  stop_pool.py  undefine.py  xslt.py  xslt_pool.py
virshx/commands/volume/: __init__.py
virshx/libvirt/: __init__.py  domain.py  entity.py  exceptions.py  hypervisor.py  storage_pool.py  uri.py  volume.py
virshx/util/: __init__.py  commands.py  match.py  match_alias.py  tables.py  terminal.py  units.py
