[tool.poetry]
name = "fvirt"
version = "0.0.1"
description = "A small CLI frontend for libvirt."
authors = ["Austin S. Hemmelgarn <ahferroin7@gmail.com>"]
license = "MITNFA"
readme = "README.md"
repository = "https://github.com/Ferroin/fvirt"

[tool.poetry.scripts]
fvirt = "fvirt.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
blessed = "^1.20.0"
click = "^8.1.7"
frozendict = "^2.3.10"
jinja2 = {version = "^3.1.2", optional = true}
libvirt-python = "^9.10.0"
lxml = "^4.9.3"
psutil = {version = "^5.9.6", optional = true}
pydantic = {version = "^2.5.0", optional = true}
pydantic-extra-types = {version = "^2.1.0", optional = true}
ruamel-yaml = {version = "^0.18.3", optional = true}

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
coverage = "^7.3.2"
flake8-2020 = "^1.8.1"
flake8 = "^6.0.0"
flake8-async = "^22.11.14"
flake8-debug = "^0.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.2"
flake8-sfs = "^1.0.0"
flaky = "^3.7.0"
isort = "^5.13.0"
lxml-stubs = "^0.4.0"
mypy = "^1.7.1"
pytest = "^7.4.2"
pytest-click = "^1.1.0"
pytest-cov = "^4.1.0"
pytest-flakefinder = "^1.1.0"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.2.0"
pytest-unique = "^0.1.1"
pytest-xdist = "^3.5.0"
ruamel-yaml = "^0.18.5"
simple-file-lock = "^2023.6"
yamllint = "^1.33.0"
types-psutil = "^5.9.5.17"

[tool.poetry.extras]
templates = ["jinja2", "psutil", "pydantic", "pydantic-extra-types", "ruamel-yaml"]

[tool.mypy]
python_version = "3.11"
cache_fine_grained = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
sqlite_cache = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "libvirt"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruamel.yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "simple_file_lock"
ignore_missing_imports = true

[tool.isort]
balanced_wrapping = true
combine_as_imports = true
combine_star = true
include_trailing_comma = false
line_length = 150
lines_between_types = 1
remove_redundant_aliases = true
reverse_relative = true
skip_gitignore = true
use_parentheses = true

[tool.pytest.ini_options]
addopts = "-n logical --dist worksteal --force-flaky --no-flaky-report"
minversion = 7.0
markers = [
    "slow: marks tests which may take a long time to run",
]
required_plugins = [
    "pytest-click",
    "pytest-timeout",
    "pytest-unique",
    "pytest-xdist",
]
testpaths = "tests"
timeout = 45
timeout_method = "thread"
tmp_path_retention_count = 2
tmp_path_retention_policy = "failed"
xfail_strict = true

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "def __repr__",
    "return NotImplemented",
    "\\s*raise RuntimeError$",
]
precision = 2
sort = '-cover'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
